...
        switch self {
        case .news:
            return "Home"
        case .map:
            return "Map"
        case .search:
            return "Search"
        case .saved:
            return "Saved"
        case .more:
            return "More"
        }
    }
...
